--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,7 +1,6 @@
 /build
-
-
-# Created by https://www.gitignore.io/api/kotlin,android,intellij+all,androidstudio
+/captures
+.externalNativeBuild
 
 ### Android ###
 # Built application files
@@ -236,13 +235,8 @@ cmake-build-*/
 # Editor-based Rest Client
 .idea/httpRequests
 
-### Intellij+all Patch ###
-# Ignores the whole .idea folder and all .iml files
-# See https://github.com/joeblau/gitignore.io/issues/186 and https://github.com/joeblau/gitignore.io/issues/360
-
 .idea/
 
-# Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-249601023
 
 modules.xml
 
@@ -263,7 +257,3 @@ modules.xml
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-
-
-# End of https://www.gitignore.io/api/kotlin,android,intellij+all,androidstudio
